# dr_libs

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Mayhemfile  README.md  dr.h  dr_2d.h  dr_audio.h  dr_codegen.h  dr_flac.h  dr_fs.h  dr_fsw.h  dr_gl.h  dr_gui.h  dr_math.h  dr_mp3.h  dr_mtl.h  dr_obj.h  dr_path.h  dr_pcx.h  dr_soft2d.h  dr_util.h  dr_vfs.h  dr_vorbis.h  dr_vulkan.h  dr_wav.h  dr_wnd.h  easy_2d.c  easy_2d.h  easy_audio.c  easy_audio.h  easy_draw.c  easy_draw.h  easy_flac.h  easy_fsw.c  easy_fsw.h  (+16 more)
.github/workflows/: build.yml  mayhem.yml
camal/: vorbis.camal
demos/: dr_wav_demo1.c  easy_wav_demo1.c
extras/: easy_mtl_codegen_glsl.c  easy_mtl_codegen_glsl.h  easy_mtl_codegen_hlsl.c  easy_mtl_codegen_hlsl.h  easy_mtl_codegen_spirv.c  easy_mtl_codegen_spirv.h  easy_mtl_compiler_mtl.c  easy_mtl_compiler_mtl.h  easy_mtl_loader_mtl.c  easy_mtl_loader_mtl.h  easy_vfs_mtl.c  easy_vfs_mtl.h  easy_vfs_pak.c  easy_vfs_pak.h  easy_vfs_zip.c  easy_vfs_zip.h  miniz.c
include/dr_libs/: CMakeLists.txt  dr_common.h  dr_flac.h  dr_mp3.h  dr_wav.h
old/: dr_gui.h  dr_path.h  dr_vulkan.h
src/: CMakeLists.txt  dr_flac.c  dr_mp3.c  dr_wav.c
tests/: CMakeLists.txt  README.md  build_flac_linux  build_flac_linux.sh  build_flac_win32.bat  build_mp3_win32.bat  build_opus_win32.bat  build_vorbis_win32.bat  build_wav_win32.bat  compile.c  dr_flac_test1.c  dr_wav_test1.c
tests/common/: dr_common.c
tests/flac/: dr_flac_common.c  dr_flac_decoding.c  dr_flac_decoding.cpp  dr_flac_mkv.c  dr_flac_seeking.c  dr_flac_test_0.c  dr_flac_test_0.cpp  flac_common.c  flac_decoding.c  flac_decoding.cpp  flac_fuzz.c  flac_seeking.c
tests/mp3/: dr_mp3_common.c  dr_mp3_playback.c  dr_mp3_test_0.c  mp3_basic.c  mp3_extract.c  mp3_playback.c
tests/opus/: dr_opus_decoding.c  dr_opus_test_0.c
tests/vorbis/: dr_vorbis_common.c  dr_vorbis_decoding.c  vorbis_decoding.c
tests/wav/: dr_wav_common.c  dr_wav_decoding.c  dr_wav_decoding.cpp  dr_wav_encoding.c  dr_wav_playback.c  dr_wav_playback.cpp  dr_wav_test_0.c  dr_wav_test_0.cpp  drwav_encoding.c  wav_common.c  wav_debugging.cpp  wav_decoding.c  wav_decoding.cpp  wav_playback.cpp
wip/: README.md  dr_audio2.h  dr_flac_matroska.c  dr_gui_scrollbar.c  dr_gui_scrollbar.h  dr_gui_tab_bar.c  dr_gui_tab_bar.h  dr_gui_text_layout.c  dr_gui_text_layout.h  dr_gui_textbox.c  dr_gui_textbox.h  dr_gui_tree_view.c  dr_gui_tree_view.h  dr_opus.h  dr_opus_log.txt  easygui_scrollbar.c  easygui_scrollbar.h  easygui_tab_bar.c  easygui_tab_bar.h  easygui_text_layout.c  easygui_text_layout.h  easygui_textbox.c  easygui_textbox.h  easygui_tree_view.c  easygui_tree_view.h
